--- a/client/src/css/Questions/styles.css
+++ b/client/src/css/Questions/styles.css
@@ -6,24 +6,77 @@
   justify-content: center
 }
 
+.question {
+  border: .0625rem solid #fff;
+  border-top: none;
+  border-radius: 3px;
+  padding: 5px;
+  margin: 3px;
+}
+
 .questions-header p{
   width:100%;
   height: 16px
 }
 
 .questions-header input{
-  background-color: var(--lightaccentcolor);
-
-  width: 100%
+  /* background-color: var(--lightaccentcolor); */
+  border: thin;
+  border-radius: 3px;
+  padding: 5px;
+  margin: 3px;
+  padding-right: 10px;
+  width: 98.25%
 }
 
 .questions-list-container{
-  height: 700px;
+  max-height: 700px;
   display:flex;
   flex-direction: column;
   overflow-y: scroll;
   overflow-x: hidden;
 }
+
+.answers-container{
+  display: flex;
+  flex-direction: column;
+}
+
+.question-details {
+  display: flex;
+  justify-content: space-between;
+}
+
+.answer-details {
+  display: flex;
+  justify-content: space-between;
+}
+
+.questions-buttons {
+  display:flex;
+  justify-content: right;
+}
+
+#load-more-answers, #add-answer  {
+  margin-top: 10px;
+  font: var(--primaryfont);
+}
+
+.question-title, .answer-title {
+  font: var(--primaryfont);
+  font-weight: bolder;
+
+}
+
+#answerReport, #answerHelpful, #questionHelpful, #questionReport, .not-answered, .answer-container {
+  font: var(--primaryfont);
+}
+/* .question-helpful-report {
+  padding:5px 2px;
+  text-align: right;
+  position:relative;
+  margin-right:10px;
+} */
 
 /* #more-questions {
   background-color: transparent;
@@ -134,19 +187,9 @@
   right:0;
 }
 
-.question-details {
-  display: flex;
-  justify-content: space-between;
-}
-
 .answer-details {
   display: flex;
   justify-content: space-between;
-}
-
-.question-title {
-  text-align: left;
-  position:relative;
 }
 
 .answer-title {
