--- a/client/src/css/Questions/styles.css
+++ b/client/src/css/Questions/styles.css
@@ -3,6 +3,7 @@
   display:flex;
   flex-direction: column;
   margin:auto;
+  width: 1050px;
   justify-content: center
 }
 
@@ -30,7 +31,7 @@
 }
 
 .questions-list-container{
-  max-height: 700px;
+  max-height: 425px;
   display:flex;
   flex-direction: column;
   overflow-y: scroll;
@@ -65,7 +66,7 @@
 .question-title, .answer-title {
   font: var(--primaryfont);
   font-weight: bolder;
-
+  max-width: 750px;
 }
 
 #answerReport, #answerHelpful, #questionHelpful, #questionReport, .not-answered, .answer-container {
