--- a/client/src/css/Reviews/listStyles.css
+++ b/client/src/css/Reviews/listStyles.css
@@ -54,6 +54,26 @@
   width: 0;
 }
 
+@media only screen and (max-width: 768px) {
+  .reviews-section {
+    max-width: 768px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .left-reviews {
+    width: 95%;
+  }
+  .right-reviews {
+    max-width: 768px;
+    width: 95%;
+  }
+  .right-reviews-header {
+    width: 97.4736%;
+  }
+}
+
 @media only screen and (max-width: 375px) {
   .reviews-section {
     max-width: 375px;
