--- a/client/src/css/Reviews/modalStyles.css
+++ b/client/src/css/Reviews/modalStyles.css
@@ -49,7 +49,6 @@
   max-height: 150px;
   height: 100%;
   width: auto;
-  max-width: 20%;
   cursor: zoom-in;
 }
 
@@ -97,12 +96,8 @@
   margin-left: 95px;
 }
 
-@media only screen and (max-width: 375px) {
-  .reg-photo {
-    max-width: 75px;
-  }
-
+@media only screen and (max-width: 768px) {
   .write-review {
-    max-width: 375px;
+    /* max-width: 375px; */
   }
 }
