--- a/client/src/css/Overview/styles.css
+++ b/client/src/css/Overview/styles.css
@@ -14,7 +14,7 @@
 }
 .overview .description {
   display: grid;
-  width: 80vw;
+  width: 90%;
   margin: 0 auto;
   grid-template-columns:  1fr 1fr 1fr 1fr;
   grid-template-rows: 5vh 1fr 1fr 1fr;
@@ -129,6 +129,7 @@
   display: block;
   width:100%;
   object-fit:fill;
+  height: 80vh;
 }
 .description-img .primary-img img:hover{
   cursor: zoom-in;
@@ -196,6 +197,10 @@ height: 80%;
   cursor: pointer;
   opacity: 0.7;
 }
+.description-carousel-btn-prev-sm:disabled{
+  opacity: 0.7;
+  color: var(--primarycolor);
+}
 .description-carousel-btn-next {
   position: absolute;
   top: 50%;
@@ -218,6 +223,10 @@ height: 80%;
 .description-carousel-btn-next-sm:hover{
   cursor: pointer;
   opacity: 0.7;
+}
+.description-carousel-btn-next-sm:disabled{
+  opacity: 0.7;
+  color: var(--primarycolor);
 }
 
 .img-list .selected {
@@ -448,7 +457,7 @@ button .sm #next{
 
 }
 .add-description-overview{
-
+  width: 90%;
   font-size: 1rem;
   margin-top: 0.2vh;
 }
@@ -523,9 +532,9 @@ button .sm #next{
   text-decoration: underline;
   cursor: pointer;
 }
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
   .description-img .primary-img img{
-    height: 80vh;
+    height: 60vh;
   }
 }
 @media screen and (max-width: 767px) {
@@ -537,6 +546,9 @@ button .sm #next{
   .overview .description .description-img {
     width: 90%;
     margin: 0 auto;
+  }
+  .overview .description .description-category{
+    margin: 1.2rem 0;
   }
   .description-img .img-list {
 
