--- a/client/src/css/Overview/styles.css
+++ b/client/src/css/Overview/styles.css
@@ -30,10 +30,15 @@
   margin-bottom: 2.6rem;
   display: flex;
   height: 100%;
-  justify-content: center;
   align-items: center;
-
 }
+.block{
+  width: 50%;
+}
+.desc-category{
+  margin-left: 2rem;
+}
+
 .overview .description .description-img{
   grid-area: img;
   display: flex;
@@ -381,7 +386,7 @@ button .sm #next{
 .line-break{
   width: 100%;
   display: inline-block;
-  background-color: var(--primarycolor);
+  background-color: var(--secondarycolor);
   padding: 0.01rem;
 }
 .half{
