--- a/client/src/css/Questions/styles.css
+++ b/client/src/css/Questions/styles.css
@@ -72,150 +72,12 @@
 #answerReport, #answerHelpful, #questionHelpful, #questionReport, .not-answered, .answer-container {
   font: var(--primaryfont);
 }
-/* .question-helpful-report {
-  padding:5px 2px;
-  text-align: right;
-  position:relative;
-  margin-right:10px;
-} */
 
-/* #more-questions {
-  background-color: transparent;
-  text-decoration: underline;
-  border: 0;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 100;
-  line-height: 1;
-  margin-top: 1.5rem;
-  margin-right: 10px;
-}
-
-#add-question {
-  text-align: left;
-  background-color: transparent;
-  text-decoration: underline;
-  border: 0;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 100;
-  line-height: 1;
-  margin-top: 1.5rem;
-}
-
-#answerHelpful {
-  background-color: transparent;
-  text-decoration: underline;
-  border: 0;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 100;
-  line-height: 1;
-  margin-right: 3px;
-}
-
-#answerReport {
-  background-color: transparent;
-  text-decoration: underline;
-  border: 0;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 100;
-  line-height: 1;
-}
-
-#questionHelpful {
-  background-color: transparent;
-  text-decoration: underline;
-  border: 0;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 100;
-  line-height: 1;
-  margin-right: 3px;
-}
-
-#questionReport {
-  background-color: transparent;
-  text-decoration: underline;
-  border: 0;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 100;
-  line-height: 1;
-}
-
-#add-answer {
-  background-color: transparent;
-  text-decoration: underline;
-  border: 0;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 100;
-  line-height: 1;
-  text-align:left;
-}
-
-#close-answer, #close-question {
-  background-color: transparent;
-  text-decoration: underline;
-  border: 0;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 100;
-  line-height: 1;
-  margin-top: 1.5rem;
-}
-
-#load-more-answers {
-  background-color: transparent;
-  text-decoration: underline;
-  border: 0;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 100;
-  line-height: 1;
-  margin-right: 10px;
-}
-
-#submit-answer, #submit-question {
-  background-color: transparent;
-  text-decoration: underline;
-  border: 0;
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 100;
-  line-height: 1;
-  margin-top: 1.5rem;
-  margin-right: 10px;
-}
-
-.questions-buttons {
-  padding:5px 2px;
-  text-align:right;
-  top:0;
-  position:relative;
-  right:0;
-}
-
-.answer-details {
-  display: flex;
-  justify-content: space-between;
-}
-
-.answer-title {
-  text-align: left;
-  position:relative;
-}
-
-.question-helpful-report {
-  padding:5px 2px;
-  text-align: right;
-  position:relative;
-  margin-right:10px;
-}
-
-.answer-helpful-report {
-  padding:5px 2px;
-  text-align: right;
-  position:relative;
-  margin-right:10px;
-}
-
-.question-search {
-  padding: 1px;
-  outline: 0;
-  width: 200px;
-  float: left;
-  padding-right: 100%;
-} */
+@media only screen and (max-width: 414px) {
+  .questions {
+    max-width: 375px;
+    width: 99%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }}
